# apex

./: CMakeLists.txt  LICENSE  README.md  apex.cxx  grad1.cxx  grammar.cxx  lexer.cxx  number.cxx  operators.cxx  range.hxx  tokenizer.cxx  tokenizer.hxx  utf.cxx  util.hxx
examples/: autodiff.md  formula.json  formula2.json  grad1.cxx  grad2.cxx  grad3.cxx  grad4.cxx
include/apex/: autodiff.hxx  autodiff_codegen.hxx  parse.hxx  tokenizer.hxx  tokens.hxx  util.hxx  value.hxx
src/autodiff/: autodiff.cxx
src/core/: value.cxx
src/parse/: grammar.cxx
src/tokenizer/: lexer.cxx  number.cxx  operators.cxx  tokenizer.cxx
src/util/: format.cxx  utf.cxx
